--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
-    "runPlayground": "node build/playground.cjs"
+    "runPlayground": "node build/playground.js"
   },
   "dependencies": {
     "@canboat/canboatjs": "https://github.com/jonaswitt/canboatjs.git#ydvr-file",
@@ -12,6 +12,7 @@
     "@rollup/plugin-json": "^5.0.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.7",
+    "mqtt": "^4.3.7",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
     "pg-native": "^3.0.1",
