--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "canboat-streams",
   "version": "1.0.0",
   "license": "MIT",
+  "bin": {
+    "playground2": "./build/playground2.js"
+  },
   "scripts": {
+    "clean": "rm -rf build",
     "build": "rollup --config rollup.config.mjs",
     "runPlayground": "node build/playground.js"
   },
@@ -11,26 +15,24 @@
     "@canboat/pgns": "^1.4.0",
     "@fast-csv/format": "^4.3.5",
     "@influxdata/influxdb-client": "^1.33.2",
-    "@rollup/plugin-json": "^5.0.1",
+    "file-stream-rotator": "^1.0.0",
     "lodash": "^4.17.21",
     "minimist": "^1.2.7",
     "mqtt": "^4.3.7",
     "node-fetch": "^3.3.0",
-    "pg": "^8.8.0",
-    "pg-native": "^3.0.1",
+    "toml": "^3.0.0",
     "ws": "^8.11.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/lodash": "^4.14.189",
     "@types/node": "16.x",
-    "@types/pg": "^8.6.5",
     "@types/ws": "^8.5.3",
     "esbuild": "^0.15.14",
     "rollup": "^3.3.0",
     "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-strip-shebang": "^1.2.10",
     "typescript": "^4.9.3"
   }
 }
