--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "license": "MIT",
   "bin": {
-    "yacht-data-streams": "./build/yacht-data-streams.js"
+    "yacht-data-streams": "./build/bin/yacht-data-streams.js"
   },
   "scripts": {
     "clean": "rm -rf build",
-    "build": "rollup --config rollup.config.mjs"
+    "build": "tsc"
   },
   "dependencies": {
     "@canboat/canboatjs": "https://github.com/jonaswitt/canboatjs.git#ydvr-file",
@@ -24,15 +24,10 @@
     "ws": "^8.11.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.2",
-    "@rollup/plugin-json": "^5.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@types/lodash": "^4.14.189",
+    "@types/lodash": "^4.14.196",
+    "@types/minimist": "^1.2.2",
     "@types/node": "16.x",
-    "@types/ws": "^8.5.3",
-    "esbuild": "^0.15.14",
-    "rollup": "^3.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
+    "@types/node-fetch": "^2.6.4",
     "typescript": "^4.9.3"
   }
 }
