--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lodash": "^4.17.21",
     "minimist": "^1.2.7",
     "mqtt": "^4.3.7",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "2",
     "toml": "^3.0.0",
     "ws": "^8.11.0"
   },
