--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@canboat/canboatjs": "https://github.com/jonaswitt/canboatjs.git#ydvr-file",
-    "@canboat/pgns": "^1.4.0",
+    "@canboat/canboatjs": "^2.4.2",
+    "@canboat/pgns": "^3.0.0",
     "@influxdata/influxdb-client": "^1.33.2",
     "csv-parser": "^3.0.0",
     "file-stream-rotator": "^1.0.0",
