--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csv-parser": "^3.0.0",
     "file-stream-rotator": "^1.0.0",
     "he": "^1.2.0",
+    "influx-line-protocol-parser": "^0.2.0",
     "lodash": "^4.17.21",
     "minimist": "^1.2.7",
     "mqtt": "^4.3.7",
