--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/minimist": "^1.2.2",
     "@types/node": "16.x",
     "@types/node-fetch": "^2.6.4",
+    "@types/ws": "^8.5.10",
     "typescript": "^4.9.3"
   }
 }
