update sample config, readme

--- a/config.example.toml
+++ b/config.example.toml
@@ -1,61 +1,65 @@
 
-[[input.victron]]
-url = "mqtt://192.168.1.1"
-measurement = "victron"
-tagInstance = true
-tagDevice = true
-# clientId = "test"
+# [[input.victron]]
+# url = "mqtt://192.168.1.1"
+# measurement = "victron"
+# tagInstance = true
+# tagDevice = true
+# # clientId = "test"
 
-[[input.ydgw]]
-port = 9000
-measurement = "nmea"
+# [[input.ydgw]]
+# port = 9000
+# measurement = "nmea"
 
-[input.ydgw.logFile]
-# See https://github.com/rogerc/file-stream-rotator#options
-filename = "log/test.%DATE%"
-frequency = "hourly"
-date_format = "YYYY-MM-DD_HH-mm"
-size = "10M"
-max_logs = "5d"
-extension = ".log"
-audit_file = "log/audit.json"
-create_symlink = true
-gzip = true
+# [input.ydgw.logFile]
+# # See https://github.com/rogerc/file-stream-rotator#options
+# filename = "log/test.%DATE%"
+# frequency = "hourly"
+# date_format = "YYYY-MM-DD_HH-mm"
+# size = "10M"
+# max_logs = "5d"
+# extension = ".log"
+# audit_file = "log/audit.json"
+# create_symlink = true
+# gzip = true
 
-[[input.h5000]]
-url = "ws://192.168.1.2:8080"
-measurement = "h5000"
+# [[input.h5000]]
+# url = "ws://192.168.1.2:8080"
+# measurement = "h5000"
 
-[[input.cortex]]
-host = "10.1.1.1"
+# [[input.cortex]]
+# host = "10.1.1.1"
 
 [mapping]
 mappingFile = "mapping.csv"
 
 [[output.console]]
-namepass = "named"
+# namepass = "named"
 
-[[output.grafana-live]]
-url = "http://192.168.1.1:3000/api/live/push/flat"
-token = "glsa_..."
-namepass = "named"
+# [[output.grafana-live]]
+# url = "http://192.168.1.1:3000/api/live/push/flat"
+# token = "glsa_..."
+# namepass = "named"
 
-[[output.influxdb]]
-url = "http://192.168.1.4:8086"
-org = "org"
-token = ""
-bucket = ""
+# [[output.influxdb]]
+# url = "http://192.168.1.4:8086"
+# org = "org"
+# token = ""
+# bucket = ""
 
-[[output.file]]
-filename = "influx/test.%DATE%"
-frequency = "hourly"
-date_format = "YYYY-MM-DD_HH-mm"
-size = "10M"
-max_logs = "5d"
-extension = ".log"
-audit_file = "influx/audit.json"
-create_symlink = true
+# [[output.file]]
+# filename = "influx/test.%DATE%"
+# frequency = "hourly"
+# date_format = "YYYY-MM-DD_HH-mm"
+# size = "10M"
+# max_logs = "5d"
+# extension = ".log"
+# audit_file = "influx/audit.json"
+# create_symlink = true
 
-[[output.websocket]]
-historyMaxAge = "10m"
-port = 9001
+# [[output.websocket]]
+# historyMaxAge = "10m"
+# port = 9001
+
+# [[output.udp-njord]]
+# port = 5000
+# address = "1.1.1.1"
