--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yacht-data-streams",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "bin": {
     "yacht-data-streams": "./build/bin/yacht-data-streams.js",
@@ -23,7 +23,9 @@
     "mqtt": "^4.3.7",
     "node-fetch": "2",
     "parse-duration": "^1.1.0",
+    "sunrise-sunset-js": "^3.2.0",
     "toml": "^3.0.0",
+    "tz-lookup": "^6.1.25",
     "ws": "^8.11.0"
   },
   "devDependencies": {
